client/src/App.css
/* ... */
.str-chat__square-button:focus {
  outline: none;
}

.str-chat__thread-start {
  padding: 0;
  margin: 20px 0 0 0;
  font-size: 0;
  width: 100%;
  border-top: 1px solid rgba(0, 0, 0, 0.1);
}

.str-chat .str-chat__list--thread {
  padding: 0px;
}

.str-chat .str-chat__list--thread .str-chat__reverse-infinite-scroll {
  padding-top: 0px;
}

.str-chat__thread-list {
  top: 62px;
  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
  height: auto;
}

.str-chat__thread-list .str-chat__message-team {
  padding: 10px;
}

.thread-message-input__wrapper {
  display: flex;
  align-items: center;
  padding: 15px 20px 28px;
  width: 100%;
}

.thread-message-input__wrapper .giphy-icon__wrapper {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  height: 24px;
  width: 63px;
  background: var(--primary-color);
  border-radius: 12px;
  margin-left: 8px;
}

.thread-message-input__wrapper .giphy-icon__text {
  font-family: Helvetica Neue, sans-serif;
  font-style: normal;
  font-weight: bold;
  font-size: 11px;
  line-height: 8px;
  color: #ffffff;
}

.thread-message-input__input {
  border: 1px solid rgba(0, 0, 0, 0.2);
  border-radius: 8px;
  display: flex;
  align-items: center;
  width: 100%;
}

.thread-message-input__input:focus-within {
  border-color: var(--primary-color);
}

.thread-message-input__button {
  display: flex;
  cursor: pointer;
  align-items: center;
  justify-content: center;
  background: rgba(0, 0, 0, 0.05);
  border-top-right-radius: 8px;
  border-bottom-right-radius: 8px;
  height: 44px;
  width: 41px;
}

.thread-message-input__input:focus-within .thread-message-input__button path {
  fill: var(--primary-color);
  fill-opacity: 1;
}

.thread-message-input__wrapper .str-chat__textarea textarea {
  display: flex;
  align-items: center;
  background: #fff;
  border: none;
  outline: none;
  font-family: Helvetica Neue, sans-serif;
  font-size: 15px;
  line-height: 10px;
}

.thread-message-input__wrapper .str-chat__textarea textarea:focus {
  border: none;
  outline: none;
  box-shadow: none;
  background: #fff;
}

.thread-message-input__wrapper .str-chat__textarea textarea::placeholder {
  color: rgba(0, 0, 0, 0.2);
}

.thread-message-input__icons {
  display: flex;
  justify-content: space-around;
  align-items: center;
  width: 30px;
  padding-right: 6px;
}

.thread-message-input__icons svg:hover path {
  fill: var(--primary-color);
  fill-opacity: 1;
}

.thread-message-input__icons svg:hover {
  cursor: pointer;
}

.thread-message-input__wrapper .str-chat__input--emojipicker {
  z-index: 3;
  top: 183px;
  right: 299px;
  width: 338px;
}

.emoji-mart .emoji-mart-emoji:focus {
  outline: none;
}

.team-channel-header_menu-icon {
  display: none;
}
/*fixed typo which didn't allow button to show up*/
.channel-list__container-toggle {
  display: none;
  height: 50px;
  width: 50px;
  background: var(--primary-color);
  position: absolute;
  right: -2%;
  top: 50%;
  border-radius: 50%;
  z-index: -1;
}

.channel-list__container-responsive {
  display: none;
  height: 100%;
  box-shadow: inset 1px 0px 0px rgba(0, 0, 0, 0.1);
  position: absolute;
  width: 90%;
  top: 0%;
  z-index: 5;
  transition: 0.8s ease;
}

.str-chat__input-flat {
  width: 100%;
  padding: 10px;
}

.str-chat__message-team-meta time{
  z-index: 1;
}

.str-chat__send-button  path {
  fill: #08aeea ;
}

@media screen and (max-width: 960px) {
  .channel-list__container {
    display: none;
  }

  .team-channel-header_menu-icon {
    display: flex;
  }

  .team-channel-header__container {
    height: 70px;
  }

  .team-channel-header__name-wrapper {
    height: 100%;
    max-width: unset;
  }

  .team-channel-header__name-multi {
    margin-right: 8px;
    align-items: center;
    flex-direction: column;
  }

  .team-channel-header__name.user {
    font-size: 10px;
    margin: 5px;
    text-align: center;
  }

  .team-channel-header__right {
    display: flex;
    padding-left: 10px;
  }

  .channel-list__container-responsive {
    display: flex;
  }

  .channel-list__list__wrapper {
    width: 100%;
  }

  .channel-list__container-toggle {
    display: flex;
  }

  .channel-search__input__wrapper {
    width: 90%;
    padding-left: 10px;
    justify-content: flex-start;
  }

  .channel-search__input__text {
    width: inherit;
  }

  .channel-preview__item.multi {
    width: 80%;
  }

  .channel-search__results {
    top: 100%;
    left: 5%;
  }

  .str-chat__message-replies-count-button{
    z-index: 0;
  }
  .str-chat__message-team-meta time{
    z-index: 0;
  }
  
  .emoji-mart-light[style]{
    
  
    background: rgb(255, 255, 255);
  }


}



@media screen and (max-width: 650px) {
  .channel-list__container-toggle {
    right: -3%;
  }

  /*threads are now responsive on devices with a screen size of max 650px*/
  .str-chat .str-chat__thread {
    background: white;
  }
.str-chat__thread{
  position: absolute;
  height: 100%;
  top: 0;
  right: 0;
  z-index: 50;
}



.str-chat__message-replies-count-button{
  z-index: 0;
}
.str-chat__message-team-meta time{
  z-index: 0;
}

.emoji-mart-light[style]{
  
  width: 310px !important;
  background: rgb(255, 255, 255);
}

/**/
}

@media screen and (max-width: 400px) {
  .channel-preview__item.multi {
    width: 150px;
  }
  .channel-list__container-toggle {
    right: -5%;
  }
  /*threads are now responsive on devices with a screen size of max 650px*/
  .str-chat .str-chat__thread {
    background: white;
  }
  .str-chat__thread{
    position: absolute;
    height: 100%;
    top: 0;
    right: 0;
    z-index: 50;
  }
  .str-chat__message-replies-count-button{
    z-index: 0;
  }
  .str-chat__message-team-meta time{
    z-index: 0;
  }
  .emoji-mart-light[style]{
    z-index: 100;
    width: 310px !important;
    background: rgb(255, 255, 255);
  }


}
/* ... */

